--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -16,14 +16,8 @@
     align-items: center;
 }
 
-.title {
-    font-size: 4rem;
-    color: #ffffff;
-    text-align: center;
-}
-
-#welcome {
-    height: 60vh;
+.container {
+    height: fit-content;
     width: 100%;
     margin: 0 auto;
     background-color: var(--yellow_dark);
@@ -33,13 +27,16 @@
     color: white;
     text-align: center;
     position: relative;
+    overflow: hidden;
 }
 
-p {
+.container p {
     font-size: large;
+    margin: 0 auto;
+    padding: 4rem;
 }
 
-#welcome::before {
+.container::before {
     content: "";
     position: absolute;
     top: 0;
